--- a/app/src/main/res/layout/recommendation_panel.xml
+++ b/app/src/main/res/layout/recommendation_panel.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,6 +9,7 @@
     tools:layout_editor_absoluteY="1dp">
 
     <ImageView
+        android:contentDescription="@string/musicImage"
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -26,14 +26,14 @@
             android:id="@+id/music_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="음악이름"
+            android:text="@string/title"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/singer_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="가수이름"
+            android:text="@string/singer"
             android:textSize="16sp" />
 
     </LinearLayout>
