--- a/app/src/main/res/layout/activity_playing_music.xml
+++ b/app/src/main/res/layout/activity_playing_music.xml
@@ -17,15 +17,14 @@
         app:layout_constraintTop_toBottomOf="@+id/singer_text" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/album_image"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="108dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name_text"
@@ -36,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/album_image" />
 
     <TextView
         android:id="@+id/singer_text"
@@ -79,7 +78,7 @@
         android:text="Switch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/name_text"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/album_image" />
 
     <Button
         android:id="@+id/comment"
