--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,13 +13,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/add_playlist_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="플레이리스트 추가" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/back_button" >
+                android:layout_above="@+id/back_button">
 
             </androidx.recyclerview.widget.RecyclerView>
 
