--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -7,10 +7,10 @@
     tools:context=".PlaylistActivity">
 
     <TextView
-        android:id="@+id/playlist_name"
+        android:id="@+id/playlist_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:text="playlist name"
         android:textSize="30dp"
@@ -21,19 +21,29 @@
         android:id="@+id/playlist_start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:text="Button"
-        app:layout_constraintStart_toEndOf="@+id/playlist_name"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
+        android:text="시작"
+        app:layout_constraintStart_toEndOf="@+id/playlist_add_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/playlist_add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="28dp"
+        android:text="추가"
+        app:layout_constraintStart_toEndOf="@+id/playlist_name_text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_recycler_view"
         android:layout_width="409dp"
         android:layout_height="600dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playlist_name" />
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/playlist_name_text"
+        tools:layout_editor_absoluteX="1dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
