--- a/app/src/main/res/layout/fragment_recommendation.xml
+++ b/app/src/main/res/layout/fragment_recommendation.xml
@@ -9,29 +9,23 @@
     <ImageView
         android:id="@+id/image"
         android:contentDescription="@string/imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="300dp"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="400dp"
+        android:layout_weight="1"/>
 
-
-
-    </androidx.viewpager.widget.ViewPager>
-
-
-
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/indicator"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:ci_drawable="@drawable/black_radius"/>
+<!--    <me.relex.circleindicator.CircleIndicator-->
+<!--        android:id="@+id/indicator"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        app:ci_drawable="@drawable/black_radius"/>-->
 
 </LinearLayout>
 
-    
+
 
 
