--- a/app/src/main/res/layout/fragment_recommendation.xml
+++ b/app/src/main/res/layout/fragment_recommendation.xml
@@ -1,31 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/singer"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/singer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="18dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
         android:id="@+id/image"
+        android:layout_width="286dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
         android:contentDescription="@string/imageview"
+        app:layout_constraintBottom_toTopOf="@+id/indicator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <me.relex.circleindicator.CircleIndicator
+        android:id="@+id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="33dp"
+        android:layout_marginTop="5dp"
+        app:ci_drawable="@drawable/black_radius"
+        app:layout_constraintTop_toBottomOf="@+id/image"
+        tools:layout_editor_absoluteX="3dp">
+
+    </me.relex.circleindicator.CircleIndicator>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_weight="1"/>
+        android:layout_width="415dp"
+        android:layout_height="322dp"
+        android:layout_weight="1"
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="282dp"
+        tools:ignore="MissingConstraints">
 
-<!--    <me.relex.circleindicator.CircleIndicator-->
-<!--        android:id="@+id/indicator"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="50dp"-->
-<!--        app:ci_drawable="@drawable/black_radius"/>-->
+    </androidx.viewpager.widget.ViewPager>
 
-</LinearLayout>
-
-
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
