--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -17,6 +17,8 @@
 
         <EditText
             android:id="@+id/editText"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             android:layout_width="320dp"
             android:layout_height="50dp"
             android:layout_marginStart="62dp"
