--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -23,7 +23,7 @@
         android:id="@+id/backBtn"
         android:backgroundTint="@color/skyBlue"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_width="104dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -41,7 +41,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/skyBlue"
         android:text="로그아웃"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:id="@+id/ViewLikesBtn"
         android:backgroundTint="@color/skyBlue"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
