--- a/app/src/main/res/layout/activity_edit_playlist.xml
+++ b/app/src/main/res/layout/activity_edit_playlist.xml
@@ -8,33 +8,43 @@
 
     <EditText
         android:id="@+id/playlist_name_text"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:hint="playlist name"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/backBtn" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_recycler_view"
-        android:layout_width="409dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="363dp"
+        android:layout_height="470dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/finishEditPlaylistButton" />
 
     <Button
         android:id="@+id/finishEditPlaylistButton"
-        android:layout_width="109dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="100dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="24dp"
         android:scaleType="fitCenter"
         android:text="수정 완료"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="100dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="뒤로 가기"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
