--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:backgroundTint="@color/skyBlue"
         android:text="로그인"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:cornerRadius="20dp" />
 
 </LinearLayout>
