--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -10,12 +10,12 @@
         android:id="@+id/playlist_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="24dp"
         android:text="playlist name"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/backBtn" />
 
     <Button
         android:id="@+id/playlist_start_button"
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/skyBlue"
         android:text="시작"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/playlist_add_button"
         app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
@@ -38,7 +38,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/skyBlue"
         android:text="추가"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/playlist_delete_button"
         app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
@@ -51,15 +51,15 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/skyBlue"
         android:text="삭제"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_recycler_view"
-        android:layout_width="409dp"
-        android:layout_height="500dp"
+        android:layout_width="363dp"
+        android:layout_height="400dp"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,12 +69,23 @@
         android:id="@+id/editPlaylistButton"
         android:layout_width="69dp"
         android:layout_height="62dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="28dp"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backBtn"
         app:srcCompat="@drawable/edit" />
+
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="100dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="뒤로 가기"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
